Fix survey questions alignment

--- a/public-app/src/app/views/donation-survey/donation-survey.component.scss
+++ b/public-app/src/app/views/donation-survey/donation-survey.component.scss
@@ -9,6 +9,10 @@
     mat-radio-button {
       margin-left: 0.5em;
     }
+
+    tr {
+      height: 2em;
+    }
     .survey-form{
       display: flex;
       flex-direction: column;
